--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Set package version
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Pack
-      run: dotnet pack --configuration Release -p:Version=0.0.3 --output .
+      run: dotnet pack --configuration Release -p:Version=${RELEASE_VERSION} --output .
     - name: Push
-      run: dotnet nuget push Package.Calc.0.0.3.nupkg --source https://nuget.pkg.github.com/mk-abs/index.json --api-key ${GH_TOKEN}
+      run: dotnet nuget push Package.Calc.${RELEASE_VERSION}.nupkg --source https://nuget.pkg.github.com/mk-abs/index.json --api-key ${GH_TOKEN}
