--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: NuGet Publish
 on:
   workflow_dispatch:
   push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+    branches:
+      - main
 
 permissions: 'write-all'
 
@@ -18,9 +18,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Exit if not on main branch
-      if: endsWith(github.ref, 'main') == false
-      run: exit -1
+    - name: Exit if not tagged for NuGet publication branch
+      if: ${{!startsWith(github.ref, 'refs/tags/v')}}
+      run: exit 0
     - name: Set package version
       run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
     - name: Pack
