--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Exit if not tagged for NuGet publication branch
       if: ${{!startsWith(github.ref, 'refs/tags/v')}}
-      run: exit 0
+      run: |
+        gh run cancel ${{ github.run_id }}
+        gh run watch ${{ github.run_id }}
     - name: Set package version
       run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
     - name: Pack
