--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,20 +17,15 @@ jobs:
     timeout-minutes: 15
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
-    - name: Set tag
-      run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Installing NBGV
+      run: dotnet tool install --tool-path . nbgv
+    - name: Bumping version
+      run: .\nbgv cloud
+    - name: Getting version
+      run: echo "VERSION=$(nbgv get-version -v SimpleVersion)" >> $GITHUB_ENV
     - name: Output tag
       run: |
-        echo $TAG
-    - name: Exit if not tagged for NuGet publication branch
-      if: ${{!startsWith(github.ref, 'refs/tags/v')}}
-      run: |
-        gh run cancel ${{ github.run_id }}
-        gh run watch ${{ github.run_id }}
-    - name: Set package version
-      run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-    - name: Pack
-      run: dotnet pack --configuration Release -p:Version=${RELEASE_VERSION} --output .
-    - name: Push
-      run: dotnet nuget push Package.Calc.${RELEASE_VERSION}.nupkg --source https://nuget.pkg.github.com/mk-abs/index.json --api-key ${GH_TOKEN}
+        echo $VERSION
