--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: nbgv prepare-release --versionIncrement Minor
     - name: Getting build version
       run: echo "VERSION=$(nbgv get-version -v SimpleVersion)" >> $GITHUB_ENV
-    - name: Output build version
+    - name: Output build versions
       run: |
         echo Version - $VERSION
     - name: Pack Nuget package
