--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -2,7 +2,7 @@ name: Pre Merge
 
 on:
   workflow_dispatch:
-  pull request:
+  pull_request:
     types: [opened, reopened, synchronize]
 
 permissions: 'write-all'
