--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.ref }}
 
     - name: Build project
       run: dotnet build --configuration Release
